--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.cinemachine": "2.6.10",
     "com.unity.collab-proxy": "1.13.5",
     "com.unity.connect.share": "4.1.1",
@@ -8,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.4",
     "com.unity.learn.iet-framework": "1.2.3",
     "com.unity.postprocessing": "3.1.1",
+    "com.unity.recorder": "2.5.5",
     "com.unity.test-framework": "1.1.30",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
